--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
     <title>Country Information - World Regions</title>
 </head>
 <body>
+<main class="center">
+    <h1 class="title">World Regions</h1>
+    <img src="assets/world_map.png" alt="World Map" width=100% />
 
+    <ul id="countries-list" class="countries-container"></ul>
+
+    <script type="module" src="app.js"></script>
+</main>
 </body>
 </html>
+<!--
+eerst een img en dan een span staan ze naast elkaar
+dan een p element dat op de volgende regel komt
+-->
