--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 <main class="center">
     <h1 class="title">World Regions</h1>
     <img src="assets/world_map.png" alt="World Map" width=100% />
+    <a href="./zoeker.html">Informatie over 1 specifiek land</a>
 
     <ul id="countries-list" class="countries-container"></ul>
 
